--- a/client/bower.json
+++ b/client/bower.json
@@ -7,7 +7,9 @@
         "es5-shim": "^4.0.0",
         "angular-route": "^1.3.0",
         "angular-resource": "^1.3.0",
-        "angular-bootstrap": "^0.12.0"
+        "angular-bootstrap": "^0.12.0",
+        "lodash": "^2.4.1",
+        "ng-lodash": "^0.1.0"
     },
     "devDependencies": {
         "angular-mocks": "~1.3.0",
